--- a/lib/projects.json
+++ b/lib/projects.json
@@ -2,7 +2,7 @@
     {
         "title": "Project One",
         "image": "../images/proj1_106 ss.png",
-        "description": "This is a visualization showing the correlation of sunshine and rain across the four seasons"
+        "description": "HTML This is a visualization showing the correlation of sunshine and rain across the four seasons"
     },
     {
         "title": "Project Two",
