--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,35 +1,55 @@
 [
+
+
+    {
+        "title": "Analysis of Cardiovascular and Respiratory Health" ,
+        "image": "../images/cardio and resp analysis ss.png",
+        "description": "This was a final project for a data science course, where we had the freedom of choosing whatever dataset we wanted, and create an interactive deployment of some kind of analysis for this dataset. What I chose to do, is create a website that allows users to compare themselves to similar athletes, so they can set a baseline to improve. Website is located <a href='https://shekark642.github.io/final106/' target='_blank'>Here</a> ",
+        "year": "2025"
+    },
+    
     {
         "title": "Weather Visualization",
         "image": "../images/proj1_106 ss.png",
-        "description": "This is a visualization showing the correlation of sunshine and rain across the four seasons. I used MatPlotLib to plot data gathered from <a href='https://www.usclimatedata.com/' target='_blank'>this source</a> ",
+        "description": "This is a visualization showing the correlation of sunshine and rain across the four seasons. I used MatPlotLib to plot data gathered from <a href='https://www.usclimatedata.com/' target='_blank'>This source</a> ",
         "year": "2025"
 
     },
     {
         "title": "Cookin Calories",
         "image": "../images/cookin calories ss.png",
-        "description": "Performed analysis on a real dataset containing cooking recipes and presented findings on Github Pages. Cleaned data and performed exploratory data analysis, conducted hypothesis testing for univariate and bivariate distributions, and used Scikit-learn pipelines to create a predictive regression model. Github Page is located <a href='https://jasminehong2392.github.io/jasmineshekar-recipes/' target='_blank'>here</a>",
+        "description": "Performed analysis on a real dataset containing cooking recipes and presented findings on Github Pages. Cleaned data and performed exploratory data analysis, conducted hypothesis testing for univariate and bivariate distributions, and used Scikit-learn pipelines to create a predictive regression model. Github Page is located <a href='https://jasminehong2392.github.io/jasmineshekar-recipes/' target='_blank'>Here</a>",
         "year": "2024"
     },
     {
         "title": "Biomechanics of Tennis Serve Motion with Increased Ball Velocity" ,
         "image": "../images/biomech ss.png",
-        "description": "Optimized the biomechanics of a tennis serve motion to increase ball velocity and proved this by using mathematical models based on Newtonian physics and statistical data from controlled experiments. You can download the reseach paper <a href='../files/Biomech tennis.csv' download>here</a>.",
+        "description": "Optimized the biomechanics of a tennis serve motion to increase ball velocity and proved this by using mathematical models based on Newtonian physics and statistical data from controlled experiments. You can download the reseach paper <a href='../files/Biomech tennis.csv' download>Here</a>.",
         "year": "2020"
     },
+
 
     {
         "title": "Personal Repository" ,
         "image": "../images/personal repo ss.png",
-        "description": "A personal project I have been working on in my free time since high school, I coded from scratch using HTML, Java Spring Boot, and Maven, and deployed with AWS EC2> you can find it at <a href='http://Shekarkrishnamoorthy.com' target='_blank'>http://Shekarkrishnamoorthy.com</a> ",
+        "description": "A personal project I have been working on in my free time since high school, I coded from scratch using HTML, Java Spring Boot, and Maven, and deployed with AWS EC2> you can find it <a href='http://main-env.eba-nbxkpiqm.us-west-1.elasticbeanstalk.com/' target='_blank'>Here</a> ",
+        "year": "2023"
+    },
+
+    {
+        "title": "Axalume NanoHex Project" ,
+        "image": "../images/nanohex LA code ss.png",
+        "description": "Here I have two files which I worked on during my internship at Axalume Inc. What I did was create code to separately move multiple linear actuators in precise amounts, and create a relative 3d field of motion. Ascess to this code is currently restricted however here is the folder: <a href='https://drive.google.com/drive/folders/1ZS0Rs3bj9_KaSwf_oaV-2B_lOa_MFHGa?usp=sharing' target='_blank'>Files</a> ",
         "year": "2024"
     },
+
+
+
 
     {
         "title": "Bikewatching in Boston" ,
         "image": "../images/bikewatching project ss.png",
-        "description": "Here is a project I did for a data science class. I used external and internal resources to create an interactive map that gives analysis on the traffic and flow of bikes. It shows information of bike lanes and bike stations for different times in the Boston area. You can find it <a href='https://shekark642.github.io/BostonBikeTraffic/' target='_blank'>here</a>",
+        "description": "Here is a project I did for a data science class. I used external and internal resources to create an interactive map that gives analysis on the traffic and flow of bikes. It shows information of bike lanes and bike stations for different times in the Boston area. You can find it <a href='https://shekark642.github.io/BostonBikeTraffic/' target='_blank'>Here</a>",
         "year": "2025"
     }
     
